--- a/client/src/index.css
+++ b/client/src/index.css
@@ -2,7 +2,7 @@ body {
 
   background-attachment: fixed;
   background: url(./images/BWfilm-reel.jpg);
-  background-size: cover;
+  background-size:auto;
   margin: 0 auto;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
     "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
